# agents-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: calc_common.rs  calculator.rs  calculator_events.rs  hello.rs  stream_chat.rs
src/: agent.rs  caching.rs  error.rs  lib.rs  llama.rs  logging.rs  message.rs  retry.rs  structured.rs  tool.rs  tool_loop.rs  tool_parser.rs  tool_response.rs  usage.rs
src/schema/: agent_data.rs  kind.rs  mod.rs  typed_agent.rs  validation.rs
src/stream/: chunk.rs  collector.rs  loop_event.rs  mod.rs  streaming_agent.rs  tool_dispatch.rs
src/structured/: format.rs  mod.rs  output_schema.rs
src/templates/: chatml.rs  gemma4.rs  grammar.rs  helpers.rs  kind.rs  llama3.rs  mistral.rs  mod.rs  template.rs
tests/: basics.rs
