[package]
name = "agents-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Minimal agent runtime: agents, tools, and structured output."

[lib]
name = "agents_rs"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["rt", "macros", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
bytes = "1"
base64 = "0.22"

[dependencies.llama-cpp-2]
git = "https://github.com/utilityai/llama-cpp-rs"
optional = true

[dependencies.llama-cpp-sys-2]
git = "https://github.com/utilityai/llama-cpp-rs"
optional = true

[dependencies.encoding_rs]
version = "0.8"
optional = true

[features]
default = []
llama-cpp = ["dep:llama-cpp-2", "dep:llama-cpp-sys-2", "dep:encoding_rs"]
cuda = ["llama-cpp", "llama-cpp-2/cuda"]
metal = ["llama-cpp", "llama-cpp-2/metal"]

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
