[package]
name = "agents-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Minimal agent runtime: agents, tools, and structured output."
autoexamples = false

[lib]
name = "agents_rs"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["rt", "macros", "sync", "time"] }
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
regex = "1"
bytes = "1"
base64 = "0.22"

[dependencies.llama-cpp-2]
path = "/Users/giovanni/Dev/llama-cpp-rs/llama-cpp-2"
optional = true

[dependencies.llama-cpp-sys-2]
path = "/Users/giovanni/Dev/llama-cpp-rs/llama-cpp-sys-2"
optional = true

[dependencies.encoding_rs]
version = "0.8"
optional = true

[features]
default = []
llama-cpp = ["dep:llama-cpp-2", "dep:llama-cpp-sys-2", "dep:encoding_rs"]
cuda = ["llama-cpp", "llama-cpp-2/cuda"]
metal = ["llama-cpp", "llama-cpp-2/metal"]

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[example]]
name = "calculator"
path = "examples/calculator.rs"
required-features = ["llama-cpp"]

[[example]]
name = "calculator_events"
path = "examples/calculator_events.rs"
required-features = ["llama-cpp"]

[[example]]
name = "stream_chat"
path = "examples/stream_chat.rs"
required-features = ["llama-cpp"]
